--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,8 @@
       ],
       "@/components/*": [
         "./components/*"
+      ],"@/images/*": [
+        "./images/*"
       ],
       "@/styles/*": [
         "./styles/*"
